--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -4,7 +4,7 @@
     <mdb-navbar SideClass="navbar navbar-expand-lg navbar-black white ie-nav fixed-top" [containerInside]="false">
         <mdb-navbar-brand>
             <a class="navbar-brand" href="#">
-                <img src="../../../../assets/imgs/suchSoftwareNoBg.png" height="40" alt="">
+                <img [src]="headerLogo" height="40" alt="">
             </a>
         </mdb-navbar-brand>
         <links>
