--- a/src/app/components/template/footer/footer.component.html
+++ b/src/app/components/template/footer/footer.component.html
@@ -9,7 +9,7 @@
 
       <!-- Grid column -->
       <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-        <h6 class="text-uppercase mb-4 font-weight-bold"><img src="../../../../assets/imgs/suchSoftwareNoBg.png"
+        <h6 class="text-uppercase mb-4 font-weight-bold"><img src="assets/imgs/suchSoftwareNoBg.png"
             height="70"></h6>
         <p>Com anos de experiência no mercado de tecnologia, a Such a Software é especializada no desenvolvimento de
           softwares que simplificam e otimizam a gestão de empresas.
