--- a/src/app/components/template/products/products.component.html
+++ b/src/app/components/template/products/products.component.html
@@ -6,7 +6,7 @@
   
       <!--Grid column-->
       <div class="col-lg-5 text-center text-lg-left" id="laptop">
-        <img src="../../../../assets/imgs/laptopSIS.png" alt="" class="img-fluid z-depth-0">
+        <img src="assets/imgs/laptopSIS.png" alt="" class="img-fluid z-depth-0">
       </div>
       <!--Grid column-->
   
@@ -45,7 +45,7 @@
       <!--Grid column-->
       <!--Grid column-->
       <div class="col-lg-5 text-center text-lg-left">
-        <img src="../../../../assets/imgs/cellphoneBenu.png" alt="" class="img-fluid z-depth-0">
+        <img src="assets/imgs/cellphoneBenu.png" alt="" class="img-fluid z-depth-0">
       </div>
       <!--Grid column-->
   
