--- a/src/app/components/template/service-app/service-app.component.html
+++ b/src/app/components/template/service-app/service-app.component.html
@@ -21,7 +21,7 @@
             </div>
             <!-- column -->
             <div class="col-lg-6 text-center">
-                <img src="../../../../assets/imgs/cellphoneMockup.png" class="img-fluid" alt="wrapkit" />
+                <img src="assets/imgs/cellphoneMockup.png" class="img-fluid" alt="wrapkit" />
             </div>
         </div>
     </div>
