--- a/src/app/components/template/team/team.component.html
+++ b/src/app/components/template/team/team.component.html
@@ -6,7 +6,7 @@
       <div class="col-md-4 wrap-service1-box">
         <div class="card border-0 card-shadow mb-4">
           <div class="card-body text-center">
-            <div class="my-3"><img src="../../../../assets/imgs/scalability.png" height="50" /></div>
+            <div class="my-3"><img src="assets/imgs/scalability.png" height="50" /></div>
             <h6 class="font-weight-medium">Sistemas Escaláveis</h6>
             <p class="mt-3">Capacidade de grande manipulação de dados nos Sistemas de forma uniforme.</p>
           </div>
@@ -16,7 +16,7 @@
       <div class="col-md-4 wrap-service1-box">
         <div class="card border-0 card-shadow mb-4">
           <div class="card-body text-center">
-            <div class="my-3"><img src="../../../../assets/imgs/stats.png" height="50" /></div>
+            <div class="my-3"><img src="assets/imgs/stats.png" height="50" /></div>
             <h6 class="font-weight-medium">Resultados Satisfatórios</h6>
             <p class="mt-3">Programas desenvolvidos para fácil utilização e resolução dos problemas da empresa.</p>
           </div>
@@ -26,7 +26,7 @@
       <div class="col-md-4 wrap-service1-box">
         <div class="card border-0 card-shadow mb-4">
           <div class="card-body text-center">
-            <div class="my-3"><img src="../../../../assets/imgs/smartphone.png" height="50" /></div>
+            <div class="my-3"><img src="assets/imgs/smartphone.png" height="50" /></div>
             <h6 class="font-weight-medium">Tecnologias de Mercado</h6>
             <p class="mt-3">Utilizamos as tecnologias mais modernas do mercado para fácil manutenção e atualização.</p>
           </div>
