--- a/src/app/components/template/products/products.component.html
+++ b/src/app/components/template/products/products.component.html
@@ -33,7 +33,7 @@
         <!--Section heading-->
         <h2 class="h2 py-1 font-weight-bold text-center">SIS Mobile 1.0 e 2.0</h2>
         <!--Section description-->
-        <p class="px-5 mb-5 pb-3 lead text-center">O Aplicativo SIS Mobile 2.0 registra todos os dados operacionais dos
+        <p class="px-5 mb-5 pb-3 lead text-center">O Aplicativo SIS Mobile registra todos os dados operacionais dos
             técnicos das empresas Controladoras de Pragas, e tudo é feito de forma offline, salvo de forma local, e sincronizado 
             de volta para o Sistema Web ao retornar à empresa!
         </p>
