--- a/src/app/components/template/contact/contact.component.html
+++ b/src/app/components/template/contact/contact.component.html
@@ -8,7 +8,7 @@
           <div class="row">
             <div class="col-lg-8">
               <div class="contact-box p-4">
-                <h4 class="title">Contact Us</h4>
+                <h4 class="title">Entre em Contato</h4>
                 <form>
                   <div class="row">
                     <div class="col-lg-6">
