--- a/src/app/components/template/footer/footer.component.html
+++ b/src/app/components/template/footer/footer.component.html
@@ -41,7 +41,7 @@
           <mdb-icon fas icon="envelope" class="mr-3"></mdb-icon> comercial@suchasoftware.com.br
         </p>
         <p>
-          <mdb-icon fas icon="phone" class="mr-3"></mdb-icon> 61 32541785
+          <mdb-icon fas icon="phone" class="mr-3"></mdb-icon> 61 3254 1785
         </p>
       </div>
       <!-- Grid column -->
