--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -1,39 +1,38 @@
 <!-- Main navigation -->
 <header class="team4">
     <!--Navbar-->
-    <mdb-navbar SideClass="navbar navbar-expand-lg navbar-black white ie-nav fixed-top" [containerInside]="false">
+    <mdb-navbar SideClass="navbar fixed-top navbar-expand-lg navbar-dark black scrolling-navbar intro-fixed-nav"
+        [containerInside]="false">
         <mdb-navbar-brand>
-            <a class="navbar-brand" href="#">
-                <img src="assets/imgs/suchSoftwareNoBg.png" height="40" alt="">
-            </a>
+            <a class="logo navbar-brand" href="#"><strong>Such a Software</strong></a>
         </mdb-navbar-brand>
         <links>
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item waves-light" mdbWavesEffect>
-                    <a class="nav-link" href="#">Início <span class="sr-only">(current)</span></a>
+                    <a class="nav-link navA" href="#">Início <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item waves-light" mdbWavesEffect>
-                    <a class="nav-link" href="#services">Recursos</a>
+                    <a class="nav-link navA" href="#services">Recursos</a>
                 </li>
                 <li class="nav-item waves-light" mdbWavesEffect>
-                    <a class="nav-link" href="#products">Produtos</a>
+                    <a class="nav-link navA" href="#products">Produtos</a>
                 </li>
                 <li class="nav-item waves-light" mdbWavesEffect>
-                    <a class="nav-link" href="#contact">Contato</a>
+                    <a class="nav-link navA" href="#contact">Contato</a>
                 </li>
             </ul>
-            <ul class="navbar-nav nav-flex-icons">
-                <li class="nav-item waves-light" mdbWavesEffect>
+            <ul class="navbar-nav ml-auto nav-flex-icons">
+                <li class="nav-item">
                     <a class="nav-link">
                         <mdb-icon fab icon="facebook-f"></mdb-icon>
                     </a>
                 </li>
-                <li class="nav-item waves-light" mdbWavesEffect>
+                <li class="nav-item">
                     <a class="nav-link">
                         <mdb-icon fab icon="twitter"></mdb-icon>
                     </a>
                 </li>
-                <li class="nav-item waves-light" mdbWavesEffect>
+                <li class="nav-item">
                     <a class="nav-link">
                         <mdb-icon fab icon="instagram"></mdb-icon>
                     </a>
@@ -45,7 +44,8 @@
     <!-- Navbar -->
     <!-- Full Page Intro -->
     <div class="view"
-        style="background-image: url('https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80'); background-repeat: no-repeat; background-size: cover; background-position: center center;" height="50">
+        style="background-image: url('https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80'); background-repeat: no-repeat; background-size: cover; background-position: center center;"
+        height="50">
         <!-- Mask & flexbox options-->
         <div class="mask rgba-black-strong d-flex justify-content-center align-items-center">
             <!-- Content -->
@@ -58,7 +58,8 @@
                         <h4 class="display-4 font-weight-bold">Modernize sua empresa com os softwares mais
                             inovadores do mercado</h4>
                         <hr class="hr-light">
-                        <h6 class="mb-3">Com a Such a Software, você tem a possibilidade de ter tudo o que precisa para modernizar a gestão do
+                        <h6 class="mb-3">Com a Such a Software, você tem a possibilidade de ter tudo o que precisa para
+                            modernizar a gestão do
                             seu negócio, diminuir seus custos e aumentar seus lucros. </h6>
                         <a mdbBtn color="white" outline="true" mdbWavesEffect href="#services">Saiba mais</a>
                     </div>
