--- a/src/app/components/template/services/services.component.html
+++ b/src/app/components/template/services/services.component.html
@@ -6,7 +6,7 @@
 
       <!--Grid column-->
       <div class="col-lg-5 text-center text-lg-left">
-        <img src="assets/imgs/laptopBenu.png" alt="" class="img-fluid z-depth-0">
+        <img src="assets/imgs/laptopSuch.png" alt="" class="img-fluid z-depth-0">
       </div>
       <!--Grid column-->
 
@@ -72,7 +72,7 @@
       <!--Grid column-->
       <!--Grid column-->
       <div class="col-lg-5 text-center text-lg-left">
-        <img src="assets/imgs/cellphoneBenu.png" alt="" class="img-fluid z-depth-0">
+        <img src="assets/imgs/cellphoneSuch.png" alt="" class="img-fluid z-depth-0">
       </div>
       <!--Grid column-->
 
