--- a/src/app/components/template/footer/footer.component.html
+++ b/src/app/components/template/footer/footer.component.html
@@ -9,9 +9,9 @@
 
       <!-- Grid column -->
       <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-        <h6 class="text-uppercase mb-4 font-weight-bold"><img src="assets/imgs/suchSoftwareNoBg.png"
-            height="70"></h6>
-        <p>Com anos de experiência no mercado de tecnologia, a Such a Software é especializada no desenvolvimento de
+        <h6 class="text-uppercase mb-4 font-weight-bold" style="text-align: center"><img src="assets/imgs/DevOpsLateral.png"
+            height="100"></h6>
+        <p>Com anos de experiência no mercado de tecnologia, a DevOps é especializada no desenvolvimento de
           softwares que simplificam e otimizam a gestão de empresas.
         </p>
       </div>
@@ -22,9 +22,6 @@
       <!-- Grid column -->
       <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
         <h6 class="text-uppercase mb-4 font-weight-bold">Produtos</h6>
-        <p>
-          <a href="https://siscontroladoras.com.br" target="_blank">SIS Controladoras</a>
-        </p>
       </div>
       <!-- Grid column -->
 
@@ -35,13 +32,13 @@
       <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
         <h6 class="text-uppercase mb-4 font-weight-bold">Contato</h6>
         <p>
-          <mdb-icon fas icon="home" class="mr-3"></mdb-icon> SHIN QI 11 Conjunto 10
+          <mdb-icon fas icon="home" class="mr-3"></mdb-icon> Lorem ipsum
         </p>
         <p>
-          <mdb-icon fas icon="envelope" class="mr-3"></mdb-icon> comercial@suchasoftware.com.br
+          <mdb-icon fas icon="envelope" class="mr-3"></mdb-icon> comercial@devops.com.br
         </p>
         <p>
-          <mdb-icon fas icon="phone" class="mr-3"></mdb-icon> 61 3254 1785
+          <mdb-icon fas icon="phone" class="mr-3"></mdb-icon> 61 9999 9999
         </p>
       </div>
       <!-- Grid column -->
