--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -4,7 +4,7 @@
     <mdb-navbar SideClass="navbar fixed-top navbar-expand-lg navbar-dark black scrolling-navbar intro-fixed-nav"
         [containerInside]="false">
         <mdb-navbar-brand>
-            <a class="logo navbar-brand" href="#"><strong>Such a Software</strong></a>
+            <a class="logo navbar-brand" href="#"><strong>DevOps Techno</strong></a>
         </mdb-navbar-brand>
         <links>
             <ul class="navbar-nav mr-auto">
@@ -58,7 +58,7 @@
                         <h4 class="display-4 font-weight-bold">Modernize sua empresa com os softwares mais
                             inovadores do mercado</h4>
                         <hr class="hr-light">
-                        <h6 class="mb-3">Com a Such a Software, você tem a possibilidade de ter tudo o que precisa para
+                        <h6 class="mb-3">Com a DevOps, você tem a possibilidade de ter tudo o que precisa para
                             modernizar a gestão do
                             seu negócio, diminuir seus custos e aumentar seus lucros. </h6>
                         <a mdbBtn color="white" outline="true" mdbWavesEffect href="#services">Saiba mais</a>
