--- a/src/app/components/template/services/services.component.html
+++ b/src/app/components/template/services/services.component.html
@@ -15,7 +15,7 @@
         <!--Section heading-->
         <h2 class="h2 py-1 font-weight-bold text-center">Sistemas Web</h2>
         <!--Section description-->
-        <p class="px-5 mb-5 pb-3 lead grey-text text-center">A Such a Software desenvolve tudo o que você precisa para
+        <p class="px-5 mb-5 pb-3 lead grey-text text-center">A DevOps desenvolve tudo o que você precisa para
           gerenciar com sucesso a gestão do seu negócio. Oferecemos funcionalidades que nenhuma
           outra plataforma do mercado oferece, além de inovações constantes que fazem toda a diferença
           para a gestão bem sucedida da sua empresa.</p>
@@ -48,7 +48,7 @@
         <!--Section description-->
         <p class="px-5 mb-5 pb-3 lead grey-text text-center">Tenha controle total da sua empresa na palma da mão! Os
           aplicativos
-          desenvolvidos pela Such a Software possibilitam:
+          desenvolvidos pela DevOps possibilitam:
         </p>
         <ul>
           <li>
@@ -64,7 +64,7 @@
           </li>
         </ul>
         <div style="text-align: center;">
-          <button mdbBtn type="button" class="rounded-pill morpheus-den-gradient" style="color: white;"
+          <button mdbBtn type="button" class="rounded-pill" color="black" style="color: white;"
             mdbWavesEffect>Veja um Exemplo</button>
         </div>
 
