--- a/src/app/components/template/contact/contact.component.html
+++ b/src/app/components/template/contact/contact.component.html
@@ -38,7 +38,7 @@
                     </div>
                     <div class="col-lg-12">
                       <button type="submit"
-                        class="btn rounded-pill morpheus-den-gradient mt-3 mb-3 text-white border-0 py-2 px-3"><span> ENVIAR <i
+                        class="btn rounded-pill mt-3 mb-3 border-0 py-2 px-3" color="black"><span> ENVIAR <i
                             class="ti-arrow-right"></i></span></button>
                     </div>
                   </div>
@@ -49,10 +49,10 @@
               style="background-image:url(https://www.wrappixel.com/demos/ui-kit/wrapkit/assets/images/contact/1.jpg)">
               <div class="detail-box p-4">
                 <h5 class="text-white font-weight-light mb-3">ENDEREÇO</h5>
-                <p class="text-white op-7">SHIN QI 11 Conjunto 10
-                  <br> Lago Norte, DF</p>
+                <p class="text-white op-7">Lorem Ipsum
+                  <br> Lorem Ipsum</p>
                 <h5 class="text-white font-weight-light mb-3 mt-4">ENTRE EM CONTATO</h5>
-                <p class="text-white op-7">61 3254 1785
+                <p class="text-white op-7">Lorem Ipsum
                   <br> </p>
                 <div class="round-social light">
                   <a class="text-decoration-none text-white border border-white rounded-circle"><i
